Add workarounds for issues mentioned in 0003377

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,12 @@ android {
 }
 
 dependencies {
+    // Include the entire app/libs/ directory as compile dependencies
     compile fileTree(include: ['*.jar'], dir: 'libs')
+
+    // Workaround for SymmetricDS 3.9 versions with missing commons-lang dependencies
+    // compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
+
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
